Integrated with autofac.webapi2

--- a/Forum.Api/packages.config
+++ b/Forum.Api/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.3.1" targetFramework="net451" />
+  <package id="Autofac" version="3.4.0" targetFramework="net451" />
+  <package id="Autofac.WebApi2" version="3.3.0" targetFramework="net451" />
   <package id="ecommon" version="1.0.9" targetFramework="net451" />
-  <package id="ecommon.autofac" version="1.1.0" targetFramework="net451" />
+  <package id="ecommon.autofac" version="1.1.1" targetFramework="net451" />
   <package id="ecommon.jsonnet" version="1.0.9" targetFramework="net451" />
   <package id="ecommon.log4net" version="1.0.9" targetFramework="net451" />
   <package id="enode" version="2.1.7" targetFramework="net451" />
