--- a/Forum.Web/packages.config
+++ b/Forum.Web/packages.config
@@ -1,58 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.3.1" targetFramework="net40" />
-  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
-  <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.Core" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OAuth.Core" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OpenId.Core" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net40" />
-  <package id="ecommon" version="1.0.9" targetFramework="net40" />
-  <package id="ecommon.autofac" version="1.1.0" targetFramework="net40" />
-  <package id="ecommon.jsonnet" version="1.0.9" targetFramework="net40" />
-  <package id="ecommon.log4net" version="1.0.9" targetFramework="net40" />
-  <package id="enode" version="2.1.7" targetFramework="net40" />
-  <package id="enode.equeue" version="1.2.0" targetFramework="net40" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
-  <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net40" />
-  <package id="equeue" version="1.1.0" targetFramework="net40" />
-  <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
-  <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
-  <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
-  <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
-  <package id="log4net" version="2.0.3" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc.zh-Hans" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Web.Optimization.zh-Hans" version="1.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core.zh-Hans" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.Data.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.OAuth.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.WebData.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http.zh-Hans" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Modernizr" version="2.5.3" targetFramework="net40" />
-  <package id="mongocsharpdriver" version="1.8.2" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
-  <package id="ServiceStack.Common" version="3.9.56" targetFramework="net40" />
-  <package id="ServiceStack.Redis" version="3.9.57" targetFramework="net40" />
-  <package id="ServiceStack.Text" version="3.9.56" targetFramework="net40" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net40" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="jQuery" version="1.10.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net451" />
+  <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
