--- a/Forum.CommandService/log4net.config
+++ b/Forum.CommandService/log4net.config
@@ -10,14 +10,17 @@
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
     </layout>
   </appender>
-  <appender name="console" type="log4net.Appender.ConsoleAppender">
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %5level %logger - %message%newline" />
-    </layout>
-  </appender>
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
-    <priority value="ALL"/>
+    <priority value="DEBUG"/>
     <appender-ref ref="rollingFile"/>
   </root>
+  <logger name="EQueue.Broker.SqlServerMessageStore" additivity="false">
+    <level value="DEBUG" />
+    <appender-ref ref="rollingFile" />
+  </logger>
+  <logger name="EQueue.Broker.InMemoryOffsetManager" additivity="false">
+    <level value="DEBUG" />
+    <appender-ref ref="rollingFile" />
+  </logger>
 </log4net>
