--- a/Forum.Web/packages.config
+++ b/Forum.Web/packages.config
@@ -1,20 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
+  <package id="Autofac" version="3.4.0" targetFramework="net451" />
+  <package id="Autofac.Mvc5" version="3.3.0" targetFramework="net451" />
+  <package id="Autofac.WebApi2" version="3.3.0" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="ecommon" version="1.0.9" targetFramework="net451" />
+  <package id="ecommon.autofac" version="1.1.1" targetFramework="net451" />
+  <package id="ecommon.jsonnet" version="1.0.9" targetFramework="net451" />
+  <package id="ecommon.log4net" version="1.0.9" targetFramework="net451" />
+  <package id="enode" version="2.1.7" targetFramework="net451" />
+  <package id="enode.equeue" version="1.2.0" targetFramework="net451" />
+  <package id="equeue" version="1.1.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
+  <package id="log4net" version="2.0.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
