--- a/Forum.Domain.Tests/Forum.Domain.Tests.csproj
+++ b/Forum.Domain.Tests/Forum.Domain.Tests.csproj
@@ -95,6 +95,7 @@
     <Compile Include="TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
