--- a/Forum.Infrastructure/Forum.Infrastructure.csproj
+++ b/Forum.Infrastructure/Forum.Infrastructure.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
