--- a/Forum.Web/Web.config
+++ b/Forum.Web/Web.config
@@ -11,6 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="false" />
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
+  <connectionStrings>
+    <add name="default" connectionString="Data Source=(local);Initial Catalog=Forum;uid=sa;pwd=howareyou;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
