--- a/Forum.Domain.Tests/App.config
+++ b/Forum.Domain.Tests/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=(local);Initial Catalog=Forum;uid=sa;pwd=howareyou;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
+    <add name="default" connectionString="Data Source=(local);Initial Catalog=Forum;Integrated Security=True;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
   </connectionStrings>
 </configuration>
