Move Event Synchronizer to domain project.

--- a/Forum.Domain/Forum.Domain.csproj
+++ b/Forum.Domain/Forum.Domain.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Accounts\Account.cs" />
     <Compile Include="Accounts\AccountCreatedEvent.cs" />
+    <Compile Include="Accounts\CheckAccountNameUniqueService.cs" />
     <Compile Include="Accounts\Registration.cs" />
     <Compile Include="Accounts\RegistrationStatus.cs" />
     <Compile Include="Accounts\DuplicateAccountNameException.cs" />
