--- a/Forum.Web/Web.config
+++ b/Forum.Web/Web.config
@@ -16,6 +16,7 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
+    <customErrors mode="On"></customErrors>
     <httpRuntime targetFramework="4.5.1" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
