--- a/Forum.Domain.Tests/Forum.Domain.Tests.csproj
+++ b/Forum.Domain.Tests/Forum.Domain.Tests.csproj
@@ -36,33 +36,26 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.3.4.0\lib\net40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon, Version=1.2.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.1.2.4\lib\net40\ECommon.dll</HintPath>
+    <Reference Include="ECommon">
+      <HintPath>..\packages\ECommon.1.2.5\lib\net40\ECommon.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Autofac, Version=1.2.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.Autofac.1.2.4\lib\net40\ECommon.Autofac.dll</HintPath>
+    <Reference Include="ECommon.Autofac">
+      <HintPath>..\packages\ECommon.Autofac.1.2.5\lib\net40\ECommon.Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.JsonNet, Version=1.2.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.JsonNet.1.2.4\lib\net40\ECommon.JsonNet.dll</HintPath>
+    <Reference Include="ECommon.JsonNet">
+      <HintPath>..\packages\ECommon.JsonNet.1.2.5\lib\net40\ECommon.JsonNet.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Log4Net, Version=1.2.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.Log4Net.1.2.4\lib\net40\ECommon.Log4Net.dll</HintPath>
+    <Reference Include="ECommon.Log4Net">
+      <HintPath>..\packages\ECommon.Log4Net.1.2.5\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.2.2\lib\net40\ENode.dll</HintPath>
+    <Reference Include="ENode">
+      <HintPath>..\packages\ENode.2.2.3\lib\net40\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.2.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.2.5\lib\net40\ENode.EQueue.dll</HintPath>
+    <Reference Include="ENode.EQueue">
+      <HintPath>..\packages\ENode.EQueue.1.2.6\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue, Version=1.1.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EQueue.1.1.5\lib\net40\EQueue.dll</HintPath>
+    <Reference Include="EQueue">
+      <HintPath>..\packages\EQueue.1.1.6\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
