--- a/Forum.Web/Web.config
+++ b/Forum.Web/Web.config
@@ -19,7 +19,7 @@
     <customErrors mode="On"></customErrors>
     <httpRuntime targetFramework="4.5.1" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" />
     </authentication>
   </system.web>
   <system.webServer>
