--- a/Forum.Commands/Forum.Commands.csproj
+++ b/Forum.Commands/Forum.Commands.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\RegisterNewAccountCommand.cs" />
+    <Compile Include="Accounts\ConfirmRegistrationCommand.cs" />
+    <Compile Include="Accounts\StartRegistrationCommand.cs" />
+    <Compile Include="Accounts\CreateAccountCommand.cs" />
     <Compile Include="Posts\UpdatePostCommand.cs" />
     <Compile Include="Posts\CreatePostCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
