big refactory code.

--- a/Forum.CommandService/Forum.CommandService.csproj
+++ b/Forum.CommandService/Forum.CommandService.csproj
@@ -54,17 +54,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ECommon.Log4Net.1.3.2\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.3.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.3.0\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.3.4\lib\net40\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode.EQueue, Version=1.3.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.3.0\lib\net40\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\ENode.EQueue.1.3.4\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="EQueue, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EQueue.1.2.0\lib\net40\EQueue.dll</HintPath>
+      <HintPath>..\packages\EQueue.1.2.1\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
@@ -90,6 +90,7 @@
     <Compile Include="Providers\AggregateRootTypeCodeProvider.cs" />
     <Compile Include="Providers\CommandTopicProvider.cs" />
     <Compile Include="Providers\CommandTypeCodeProvider.cs" />
+    <Compile Include="Providers\EventHandlerTypeCodeProvider.cs" />
     <Compile Include="Providers\EventTopicProvider.cs" />
     <Compile Include="Providers\EventTypeCodeProvider.cs" />
     <Compile Include="Service1.cs">
@@ -124,6 +125,10 @@
       <Project>{7787ec6c-9cf3-401c-803a-b4da2b0ca9ef}</Project>
       <Name>Forum.Commands</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain.Dapper\Forum.Domain.Dapper.csproj">
+      <Project>{6ad347f8-d02e-4aaa-a72b-c4ad93971986}</Project>
+      <Name>Forum.Domain.Dapper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
       <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
       <Name>Forum.Domain</Name>
@@ -131,6 +136,10 @@
     <ProjectReference Include="..\Forum.Infrastructure\Forum.Infrastructure.csproj">
       <Project>{86985782-8588-48da-81ab-ffd3b855c73c}</Project>
       <Name>Forum.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.ProcessManagers\Forum.ProcessManagers.csproj">
+      <Project>{bdf262af-7287-492e-aeff-fd8612e88834}</Project>
+      <Name>Forum.ProcessManagers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
