--- a/Forum.Domain.Tests/Forum.Domain.Tests.csproj
+++ b/Forum.Domain.Tests/Forum.Domain.Tests.csproj
@@ -52,17 +52,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ECommon.Log4Net.1.3.2\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.3.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.3.0\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.3.4\lib\net40\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode.EQueue, Version=1.3.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.3.0\lib\net40\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\ENode.EQueue.1.3.4\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="EQueue, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EQueue.1.2.0\lib\net40\EQueue.dll</HintPath>
+      <HintPath>..\packages\EQueue.1.2.1\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
@@ -113,6 +113,10 @@
     <ProjectReference Include="..\Forum.Denormalizers.Dapper\Forum.Denormalizers.Dapper.csproj">
       <Project>{433dd072-0748-4440-ba1b-4a0d6e507d3b}</Project>
       <Name>Forum.Denormalizers.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain.Dapper\Forum.Domain.Dapper.csproj">
+      <Project>{6ad347f8-d02e-4aaa-a72b-c4ad93971986}</Project>
+      <Name>Forum.Domain.Dapper</Name>
     </ProjectReference>
     <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
       <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
