--- a/Forum.Infrastructure/Forum.Infrastructure.csproj
+++ b/Forum.Infrastructure/Forum.Infrastructure.csproj
@@ -46,8 +46,8 @@
     <Compile Include="DefaultIdentityGenerator.cs" />
     <Compile Include="Assert.cs" />
     <Compile Include="ConfigSettings.cs" />
-    <Compile Include="ErrorCodes.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DuplicationAccountException.cs" />
     <Compile Include="IIdentityGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
