--- a/Forum.CommandService/Forum.CommandService.csproj
+++ b/Forum.CommandService/Forum.CommandService.csproj
@@ -57,8 +57,9 @@
     <Reference Include="ENode">
       <HintPath>..\packages\ENode.2.3.6\lib\net40\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue">
-      <HintPath>..\packages\ENode.EQueue.1.3.6\lib\net40\ENode.EQueue.dll</HintPath>
+    <Reference Include="ENode.EQueue, Version=1.3.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ENode.EQueue.1.3.9\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
     <Reference Include="EQueue">
       <HintPath>..\packages\EQueue.1.2.2\lib\net40\EQueue.dll</HintPath>
@@ -87,9 +88,7 @@
     <Compile Include="Providers\AggregateRootTypeCodeProvider.cs" />
     <Compile Include="Providers\CommandTopicProvider.cs" />
     <Compile Include="Providers\CommandTypeCodeProvider.cs" />
-    <Compile Include="Providers\EventHandlerTypeCodeProvider.cs" />
     <Compile Include="Providers\EventTopicProvider.cs" />
-    <Compile Include="Providers\EventTypeCodeProvider.cs" />
     <Compile Include="Service1.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -133,10 +132,6 @@
     <ProjectReference Include="..\Forum.Infrastructure\Forum.Infrastructure.csproj">
       <Project>{86985782-8588-48da-81ab-ffd3b855c73c}</Project>
       <Name>Forum.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Forum.ProcessManagers\Forum.ProcessManagers.csproj">
-      <Project>{bdf262af-7287-492e-aeff-fd8612e88834}</Project>
-      <Name>Forum.ProcessManagers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
