--- a/Forum.Domain.Dapper/Forum.Domain.Dapper.csproj
+++ b/Forum.Domain.Dapper/Forum.Domain.Dapper.csproj
@@ -35,6 +35,7 @@
     <Reference Include="ECommon">
       <HintPath>..\packages\ECommon.1.3.2\lib\net40\ECommon.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
