--- a/Forum.QueryServices.Dapper/Forum.QueryServices.Dapper.csproj
+++ b/Forum.QueryServices.Dapper/Forum.QueryServices.Dapper.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BaseQueryService.cs" />
     <Compile Include="AccountQueryService.cs" />
+    <Compile Include="ReplyQueryService.cs" />
     <Compile Include="PostQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SectionQueryService.cs" />
